<resources>
    <string name="google_map_api_key_debug">0IgVgWFseCoAyOOEFSXlrEhfjQE99UGBY_sh2CA</string>
    <string name="fabric_api_key">dd38dd735f1aa5146e772a3cb865d52c335cf248</string>
    <string name="app_id">507047192642711</string>
    <string name="btnOk">OK</string>
    <string name="btnCancel">Annuler</string>
    <string name="lblComputationPrefs">Préférences de calcul</string>
    <string name="lblViewPrefs">Préférences d\'affichage</string>
    <string name="lblGamePrefs">Préférences de jeu</string>
    <string name="lblDevPrefs">Préférences de développement</string>
    <string name="lblSimulationMode">Mode simulation</string>
    <string name="lblGameSetView">Affichage des donnes</string>
    <string name="lblIsBelgianAuthorized">Belge autorisée (non officiel)</string>
    <string name="lblIsMiseryAuthorized">Misère autorisée à 3 ou 4 (non officiel)</string>
    <string name="lblIsPenaltyAuthorized">Fausse donne autorisée</string>
    <string name="lblIsPassAuthorized">Passe autorisée</string>
    <string name="lblBelgianStepPoints">Points de Belge (pas)</string>
    <string name="lblIsPriseAuthorized">Prise autorisée</string>
    <string name="lblIsPetiteAuthorized">Petite autorisée (non officiel)</string>
    <string name="lblIsOneDeadPlayerAuthorized">Mort autorisé</string>
    <string name="lblDeadPlayerAutomaticallySelected">Sélection du mort automatique</string>
    <string name="lblPetitePoints">Points de Petite</string>
    <string name="lblPetiteRate">Taux de Petite</string>
    <string name="lblPrisePoints">Points de Prise</string>
    <string name="lblPriseRate">Taux de Prise</string>
    <string name="lblGardePoints">Points de Garde</string>
    <string name="lblGardeRate">Taux de Garde</string>
    <string name="lblGardeSansPoints">Points de Garde Sans</string>
    <string name="lblGardeSansRate">Taux de Garde Sans</string>
    <string name="lblGardeContrePoints">Points de Garde Contre</string>
    <string name="lblGardeContreRate">Taux de Garde Contre</string>
    <string name="lblKidAtTheEndPoints">Points de petit au bout</string>
    <string name="lblMiseryPoints">Points de misère</string>
    <string name="lblPoigneePoints">Points de poignée</string>
    <string name="lblDoublePoigneePoints">Points de double poignée</string>
    <string name="lblTriplePoigneePoints">Points de triple poignée</string>
    <string name="lblAnnouncedAndSucceededChelemPoints">Points de chelem annoncé et réussi</string>
    <string name="lblAnnouncedAndFailedChelemPoints">Points de chelem annoncé et chuté</string>
    <string name="lblNotAnnouncedButSucceededChelemPoints">Points de chelem non annoncé mais réussi</string>
    <string name="lblDisplayNextPlayer">Entourer le prochain distributeur</string>
    <string name="lblGameOrderDisplay">Affichage des jeux descendant</string>
    <string name="lblGameScoreDisplay">Affichage des scores globaux pour chaque jeu</string>
    <string name="lblKeepScreenOn">Maintenir l\'écran allumé</string>
    <string name="lblMainActivityTitle">TarotDroid</string>
    <string name="lblNewGameSet">Nouvelle partie</string>
    <string name="lblNewGameSetDetails">Comptez les points d\'une nouvelle partie</string>
    <string name="lblGameSetHistory">Historique</string>
    <string name="lblGameSetHistoryDetails">Continuez ou consultez une partie sauvegardée</string>
    <string name="lblPlayersDetails">Consultez l\'historique des joueurs et modifiez leurs photos</string>
    <string name="lblMyAccount">Mon compte</string>
    <string name="lblMyAccountDetails">Partagez vos parties et stockez les dans le Cloud</string>
    <string name="lblFacebook">Facebook</string>
    <string name="lblFacebookDetails">Rejoignez nous sur Facebbok</string>
    <string name="lblGooglePlay">Google Play</string>
    <string name="lblGooglePlayDetails">Dites nous si vous aimez TarotDroid et récupérez les dernières versions</string>
    <string name="lblGmail">Contactez nous!</string>
    <string name="lblGmailDetails">Un bug? Une question? Une idée? Demandez nous!</string>
    <string name="lblFullVersion">Version complète</string>
    <string name="lblFullVersionDetails">Passez à la version complète et stockez un nombre illimté de parties</string>
    <string name="lblAboutItem">A propos</string>
    <string name="lblDbExportItem">Export des données</string>
    <string name="lblDbImportItem">Import de données</string>
    <string name="lblContactItem">Contact</string>
    <string name="lblMockItem">Mock</string>
    <string name="lblContactUs">Contactez-nous par email</string>
    <string name="lblNewGameActivityTitle">Nouvelle partie</string>
    <string name="lblNewTarot3">Tarot à 3</string>
    <string name="lblNewTarot4">Tarot à 4</string>
    <string name="lblNewTarot5">Tarot à 5</string>
    <string name="lblNewTarot3Description">Règles du tarot à 3, à 3 joueurs ou à 4 joueurs avec un mort tournant</string>
    <string name="lblNewTarot4Description">Règles du tarot à 4, à 4 joueurs ou à 5 joueurs avec un mort tournant</string>
    <string name="lblNewTarot5Description">Règles du tarot à 5, à 5 joueurs ou à 6 joueurs avec un mort tournant</string>
    <string name="lblPlayer1Name">Joueur 1</string>
    <string name="lblPlayer2Name">Joueur 2</string>
    <string name="lblPlayer3Name">Joueur 3</string>
    <string name="lblPlayer4Name">Joueur 4</string>
    <string name="lblPlayer5Name">Joueur 5</string>
    <string name="lblPlayer6Name">Joueur 6</string>
    <string name="lblPlayer1NameHint">Nom du joueur 1</string>
    <string name="lblPlayer2NameHint">Nom du joueur 2</string>
    <string name="lblPlayer3NameHint">Nom du joueur 3</string>
    <string name="lblPlayer4NameHint">Nom du joueur 4</string>
    <string name="lblPlayer5NameHint">Nom du joueur 5</string>
    <string name="lblPlayer6NameHint">Nom du joueur 6</string>
    <string name="lblCompulsoryPlayersSection">Joueurs obligatoires</string>
    <string name="lblOptionalPlayerSection">Joueur facultatif</string>
    <string name="lblStartItem">Démarrer</string>
    <string name="lblPlayerNumber">Joueur %1s</string>
    <string name="lblGameSetHistoryActivityTitlePlural">%1d parties historisées</string>
    <string name="lblGameSetHistoryActivityTitleSingle">1 partie historisée</string>
    <string name="lblGameSetHistoryActivityTitleNone">Aucune partie historisée</string>
    <string name="lblGameSetHistoryActivityMenuTitle">Partie jouée le %1s</string>
    <string name="lblPublishGameSet">Publier sur Facebook</string>
    <string name="lblEditGameSet">Modifier</string>
    <string name="lblViewGameSet">Consulter</string>
    <string name="lblDeleteGameSet">Supprimer</string>
    <string name="lblBluetoothDiscover">Rechercher des périphériques</string>
    <string name="lblBluetoothGetDiscoverable">Se montrer</string>
    <string name="lblBluetoothReceive">Recevoir une partie</string>
    <string name="lblBluetoothHelp">Aide</string>
    <string name="lblBluetoothSend">Envoyer par bluetooth</string>
    <string name="lblSelectBluetoothDevice">Sélectionnez le périphérique cible</string>
    <string name="lblTarot3Description">Tarot à 3</string>
    <string name="lblTarot4Description">Tarot à 4</string>
    <string name="lblTarot5Description">Tarot à 5</string>
    <string name="lblGameSetTitle">%1$s</string>
    <string name="lblGameSetDescriptionSingle">%1$s donne, joueurs: %2$s</string>
    <string name="lblGameSetDescriptionPlural">%1$s donnes, joueurs: %2$s</string>
    <string name="lblBluetoothItem">Transférer par Bluetooth</string>
    <string name="lblInitDalItem">Supprimer tout</string>
    <string name="lblNewStandardGameTitle">Nouvelle donne</string>
    <string name="lblUpdateGameTitle">Modification</string>
    <string name="lblNewBelgianGameTitle">Nouvelle donne belge</string>
    <string name="lblNewPenaltyGameTitle">Nouvelle fausse donne</string>
    <string name="lblNewPassedGameTitle">Nouvelle passe</string>
    <string name="oudlerCount">Nombre de bouts</string>
    <string name="leaderPlayer">Preneur</string>
    <string name="calledPlayer">Joueur appelé</string>
    <string name="lblDeadPlayer">Mort</string>
    <string name="pointsEarnedByAttack">Score attaque</string>
    <string name="pointsEarnedByDefense">Score défense</string>
    <string name="lblDealer">Distributeur</string>
    <string name="lblBet">Contrat</string>
    <string name="gameOfindex">Donne n°</string>
    <string name="first">Premier</string>
    <string name="second">Second</string>
    <string name="third">Troisième</string>
    <string name="fourth">Quatrième</string>
    <string name="fifth">Cinquième</string>
    <string name="lblPlus">+</string>
    <string name="lblMinus">-</string>
    <string name="gardeContreDescription">Garde Contre</string>
    <string name="gardeSansDescription">Garde Sans</string>
    <string name="gardeDescription">Garde</string>
    <string name="priseDescription">Prise</string>
    <string name="petiteDescription">Petite</string>
    <string name="belgeDescription">Belge</string>
    <string name="passDescription">Passe</string>
    <string name="penaltyDescription">Fausse donne</string>
    <string name="lblPoignee">Poignée</string>
    <string name="lblDoublePoignee">Double poignée</string>
    <string name="lblTriplePoignee">Triple poignée</string>
    <string name="lblKidAtTheEnd">Petit au bout</string>
    <string name="lblMisery">Misère</string>
    <string name="lblChelem">Chelem</string>
    <string name="lblCalledColor">Couleur appelée</string>
    <string name="lblHeartsColor">Coeur</string>
    <string name="lblDiamondsColor">Carreau</string>
    <string name="lblClubsColor">Trèfle</string>
    <string name="lblSpadesColor">Pique</string>
    <string name="lblAnnouncedAndSucceededChelem">Annoncé et passé</string>
    <string name="lblAnnouncedAndFailedChelem">Annoncé et chuté</string>
    <string name="lblNotAnnouncedButSucceededChelem">Non annoncé et passé</string>
    <string name="lblTeam">Equipe</string>
    <string name="lblDefenseTeam">Défense</string>
    <string name="lblLeadingTeam">Attaque</string>
    <string name="lblBothTeams">Les deux</string>
    <string name="lblValidateGame">Valider</string>
    <string name="lblDealerSection">Distributeur</string>
    <string name="lblDeadAndDealerSection">Mort et distributeur</string>
    <string name="lblMainParametersSection">Paramètres principaux</string>
    <string name="lblAnnoucementsSection">Annonces</string>
    <string name="lblPenaltedPlayer">Joueur pénalisé</string>
    <string name="lblGlobalPenaltyPoints">Pénalité globale</string>
    <string name="lblPlayerPenaltyPoints">Points de pénalité</string>
    <string name="lblViewGameActivityTitle">Consultation de donne</string>
    <string name="lblViewStdTarotActivityTitle">Donne n°%1$s sur %2$s</string>
    <string name="lblViewBelgianTarotActivityTitle">Donne n°%1$s sur %2$s (belge)</string>
    <string name="lblDeleteGameItem">Supprimer</string>
    <string name="lblMainStatActivityTitle">Statistiques de la partie</string>
    <string name="lblTabGameSetActivityNoGameTitle">Aucune donne jouée</string>
    <string name="lblTabGameSetActivityOneGameTitle">1 donne jouée</string>
    <string name="lblTabGameSetActivitySeveralGamesTitle">%1$s donnes jouées</string>
    <string name="lblScore">Score</string>
    <string name="lblLeadingGames">Prises</string>
    <string name="lblSuccessfulLeadingGames">Succès</string>
    <string name="lblCalledGames">Appels</string>
    <string name="lblMinScore">Min</string>
    <string name="lblMaxScore">Max</string>
    <string name="shortGardeContreDescription">GC</string>
    <string name="shortGardeSansDescription">GS</string>
    <string name="shortGardeDescription">G</string>
    <string name="shortPriseDescription">P</string>
    <string name="shortPetiteDescription">Pe</string>
    <string name="shortBelgeDescription">B</string>
    <string name="shortPassDescription">Passe</string>
</resources>