<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:key="key_root"
    android:title="Preferences">
    <PreferenceCategory android:title="@string/lblComputationPrefs">
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="25"
            android:key="prisePoints"
            android:numeric="integer"
            android:title="@string/lblPrisePoints"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="1"
            android:key="priseRate"
            android:numeric="integer"
            android:title="@string/lblPriseRate"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="50"
            android:key="gardePoints"
            android:numeric="integer"
            android:title="@string/lblGardePoints"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="2"
            android:key="gardeRate"
            android:numeric="integer"
            android:title="@string/lblGardeRate"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="100"
            android:key="gardeSansPoints"
            android:numeric="integer"
            android:title="@string/lblGardeSansPoints"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="4"
            android:key="gardeSansRate"
            android:numeric="integer"
            android:title="@string/lblGardeSansRate"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="150"
            android:key="gardeContrePoints"
            android:numeric="integer"
            android:title="@string/lblGardeContrePoints"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="6"
            android:key="gardeContreRate"
            android:numeric="integer"
            android:title="@string/lblGardeContreRate"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="10"
            android:key="miseryPoints"
            android:numeric="integer"
            android:title="@string/lblMiseryPoints"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="20"
            android:key="poigneePoints"
            android:numeric="integer"
            android:title="@string/lblPoigneePoints"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="30"
            android:key="doublePoigneePoints"
            android:numeric="integer"
            android:title="@string/lblDoublePoigneePoints"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="40"
            android:key="triplePoigneePoints"
            android:numeric="integer"
            android:title="@string/lblTriplePoigneePoints"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="10"
            android:key="kidAtTheEndPoints"
            android:numeric="integer"
            android:title="@string/lblKidAtTheEndPoints"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="400"
            android:key="announcedAndSucceededChelemPoints"
            android:numeric="integer"
            android:title="@string/lblAnnouncedAndSucceededChelemPoints"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="-200"
            android:key="announcedAndFailedChelemPoints"
            android:numeric="signed"
            android:title="@string/lblAnnouncedAndFailedChelemPoints"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="200"
            android:key="notAnnouncedButSucceededChelemPoints"
            android:numeric="integer"
            android:title="@string/lblNotAnnouncedButSucceededChelemPoints"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/lblGamePrefs">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="isPriseAuthorized"
            android:title="@string/lblIsPriseAuthorized"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="isPriseAuthorized"
            android:key="isPetiteAuthorized"
            android:title="@string/lblIsPetiteAuthorized"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="10"
            android:dependency="isPetiteAuthorized"
            android:key="petitePoints"
            android:numeric="integer"
            android:title="@string/lblPetitePoints"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="1"
            android:dependency="isPetiteAuthorized"
            android:key="petiteRate"
            android:numeric="integer"
            android:title="@string/lblPetiteRate"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="areBelgianGamesAllowed"
            android:title="@string/lblIsBelgianAuthorized"/>
        <org.nla.tarotdroid.core.EditIntegerPreference
            android:defaultValue="100"
            android:dependency="areBelgianGamesAllowed"
            android:key="belgianStepPoints"
            android:title="@string/lblBelgianStepPoints"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="arePenaltyGamesAllowed"
            android:title="@string/lblIsPenaltyAuthorized"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="arePassedGamesAllowed"
            android:title="@string/lblIsPassAuthorized"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="isMiseryAuthorized"
            android:title="@string/lblIsMiseryAuthorized"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/lblViewPrefs">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="displayGamesInReverseOrder"
            android:title="@string/lblGameOrderDisplay"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="displayGlobalScoresForEachGame"
            android:title="@string/lblGameScoreDisplay"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="keepScreenOn"
            android:title="@string/lblKeepScreenOn"/>
    </PreferenceCategory>
</PreferenceScreen>
