<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	android:id="@+id/scrollView1"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:id="@+id/mainLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

	    
        <!-- Section Joueurs obligatoires -->
        <LinearLayout
			android:id="@+id/layoutCompulsory"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="#0f0f0f"
			android:orientation="vertical">
            <TextView
				android:id="@+id/txtTitleDeadAndDealer"
				style="@style/GameSectionTitleStyle"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="#005555"
				android:padding="5dip"
				android:text="@string/lblCompulsoryPlayersSection" />
		</LinearLayout>
        	    
		<!-- Player 1 -->
	    <LinearLayout
			android:id="@+id/panelPlayer1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:baselineAligned="false"
			android:orientation="horizontal">
	        
	        <LinearLayout
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="0.2"
				android:orientation="vertical"
				android:paddingBottom="2dp"
				android:paddingLeft="2dp"
				android:paddingRight="2dp"
				android:paddingTop="2dp">
	            <TextView
					style="@style/LabelTextStyle"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="2dp"
					android:text="@string/lblPlayer1Name"/>

				<org.nla.tarotdroid.ui.controls.PlayerSelectorAutoCompleteTextView
					android:id="@+id/namePlayer1"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:completionThreshold="1"
					android:hint="@string/lblPlayer1NameHint"
					android:maxLength="9"/>
	        </LinearLayout>
		</LinearLayout>
		
		<!-- Player 2 -->
	    <LinearLayout
			android:id="@+id/panelPlayer2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:baselineAligned="false"
			android:orientation="horizontal">
	        
	        <LinearLayout
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="0.2"
				android:orientation="vertical"
				android:paddingBottom="2dp"
				android:paddingLeft="2dp"
				android:paddingRight="2dp"
				android:paddingTop="2dp">
	            <TextView
					style="@style/LabelTextStyle"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="2dp"
					android:text="@string/lblPlayer2Name"/>

				<org.nla.tarotdroid.ui.controls.PlayerSelectorAutoCompleteTextView
					android:id="@+id/namePlayer2"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:completionThreshold="1"
					android:hint="@string/lblPlayer2NameHint"
					android:maxLength="9"/>
	        </LinearLayout>
		</LinearLayout>
		
		<!-- Player 3 -->
	    <LinearLayout
			android:id="@+id/panelPlayer3"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:baselineAligned="false"
			android:orientation="horizontal">
	        
	        <LinearLayout
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="0.2"
				android:orientation="vertical"
				android:paddingBottom="2dp"
				android:paddingLeft="2dp"
				android:paddingRight="2dp"
				android:paddingTop="2dp">
	            <TextView
					style="@style/LabelTextStyle"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="2dp"
					android:text="@string/lblPlayer3Name"/>

				<org.nla.tarotdroid.ui.controls.PlayerSelectorAutoCompleteTextView
					android:id="@+id/namePlayer3"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:completionThreshold="1"
					android:hint="@string/lblPlayer3NameHint"
					android:maxLength="9"/>
	        </LinearLayout>
		</LinearLayout>
		
        <!-- Section Joueurs facultatifs 1 -->
        <LinearLayout
			android:id="@+id/layoutFacultatif1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="#0f0f0f"
			android:orientation="vertical">
            <TextView
				style="@style/GameSectionTitleStyle"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="#005555"
				android:padding="5dip"
				android:text="@string/lblOptionalPlayerSection" />
		</LinearLayout>

		
		<!-- Player 4 -->
	    <LinearLayout
			android:id="@+id/panelPlayer4"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:baselineAligned="false"
			android:orientation="horizontal">
	        
	        <LinearLayout
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="0.2"
				android:orientation="vertical"
				android:paddingBottom="2dp"
				android:paddingLeft="2dp"
				android:paddingRight="2dp"
				android:paddingTop="2dp">
	            <TextView
					style="@style/LabelTextStyle"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="2dp"
					android:text="@string/lblPlayer4Name"/>

				<org.nla.tarotdroid.ui.controls.PlayerSelectorAutoCompleteTextView
					android:id="@+id/namePlayer4"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:completionThreshold="1"
					android:hint="@string/lblPlayer4NameHint"
					android:maxLength="9"/>
	        </LinearLayout>
		</LinearLayout>
		
        <!-- Section Joueurs facultatifs 2 -->
        <LinearLayout
			android:id="@+id/layoutFacultatif2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="#0f0f0f"
			android:orientation="vertical">
            <TextView
				style="@style/GameSectionTitleStyle"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="#005555"
				android:padding="5dip"
				android:text="@string/lblOptionalPlayerSection" />
		</LinearLayout>

		<!-- Player 5 -->
	    <LinearLayout
			android:id="@+id/panelPlayer5"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:baselineAligned="false"
			android:orientation="horizontal">
	        
	        <LinearLayout
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="0.2"
				android:orientation="vertical"
				android:paddingBottom="2dp"
				android:paddingLeft="2dp"
				android:paddingRight="2dp"
				android:paddingTop="2dp">
	            <TextView
					style="@style/LabelTextStyle"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="2dp"
					android:text="@string/lblPlayer5Name"/>

				<org.nla.tarotdroid.ui.controls.PlayerSelectorAutoCompleteTextView
					android:id="@+id/namePlayer5"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:completionThreshold="1"
					android:hint="@string/lblPlayer5NameHint"
					android:maxLength="9"/>
	        </LinearLayout>
		</LinearLayout>
		
        <!-- Section Joueurs facultatifs 3 -->
        <LinearLayout
			android:id="@+id/layoutFacultatif3"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="#0f0f0f"
			android:orientation="vertical">
            <TextView
				style="@style/GameSectionTitleStyle"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="#005555"
				android:padding="5dip"
				android:text="@string/lblOptionalPlayerSection" />
		</LinearLayout>
		
		<!-- Player 6 -->
	    <LinearLayout
			android:id="@+id/panelPlayer6"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:baselineAligned="false"
			android:orientation="horizontal">
	        
	        <LinearLayout
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="0.2"
				android:orientation="vertical"
				android:paddingBottom="2dp"
				android:paddingLeft="2dp"
				android:paddingRight="2dp"
				android:paddingTop="2dp">
	            <TextView
					style="@style/LabelTextStyle"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="2dp"
					android:text="@string/lblPlayer6Name"/>

				<org.nla.tarotdroid.ui.controls.PlayerSelectorAutoCompleteTextView
					android:id="@+id/namePlayer6"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:completionThreshold="1"
					android:hint="@string/lblPlayer6NameHint"
					android:maxLength="9"/>
	        </LinearLayout>
		</LinearLayout>
	</LinearLayout>
</ScrollView>